auth-service updated